--- a/MicroNet.Tools.Core/build.properties
+++ b/MicroNet.Tools.Core/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/micronet-0.0.1-SNAPSHOT-jar-with-dependencies.jar
+               lib/micronet-0.0.1-SNAPSHOT-jar-with-dependencies.jar,\
+               lib/tools.yaml.utility-0.0.1-SNAPSHOT-jar-with-dependencies.jar
