--- a/tools.yaml.utility/.project
+++ b/tools.yaml.utility/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tools.yaml-utility</name>
+	<name>tools.yaml.utility</name>
 	<comment></comment>
 	<projects>
 	</projects>
