Annotation Processing Plugin is now Dual (Maven/Eclipse)

--- a/MicroNet.Tools.Annotations.Processors.Native/pom.xml
+++ b/MicroNet.Tools.Annotations.Processors.Native/pom.xml
@@ -19,7 +19,10 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.6.1</version>
 					<configuration>
-						<compilerArgument>-proc:none</compilerArgument>
+						<compilerArgs>
+							<arg>-proc:none</arg>
+						</compilerArgs>
+
 					</configuration>
 				</plugin>
 			</plugins>
