Everything with extracted ParameterCodes is functional but not in the right place

--- a/MicroNet.Tools.Annotations.Processors.Plugin/build.properties
+++ b/MicroNet.Tools.Annotations.Processors.Plugin/build.properties
@@ -3,5 +3,4 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               lib/tools.annotation.processors-0.0.1-SNAPSHOT-sources.jar,\
-               lib/tools.annotation.processors-0.0.1-SNAPSHOT.jar
+               lib/tools.annotation.processors-0.0.1-SNAPSHOT-jar-with-dependencies.jar
