--- a/MicroNet.Tools.Annotations.Processors/src/main/resources/velocity.properties
+++ b/MicroNet.Tools.Annotations.Processors/src/main/resources/velocity.properties
@@ -1,4 +1,4 @@
-runtime.log.logsystem.class = org.apache.velocity.runtime.log.SystemLogChute
+runtime.log.logsystem.class = org.apache.velocity.runtime.log.NullLogSystem
 
 resource.loader = classpath
 classpath.resource.loader.class = org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader
