--- a/MicroNet.Tools.Annotations.Processors/pom.xml
+++ b/MicroNet.Tools.Annotations.Processors/pom.xml
@@ -55,12 +55,13 @@
 			<version>0.0.2-SNAPSHOT</version>
 			<type>pom</type>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.velocity/velocity -->
+		<!-- https://mvnrepository.com/artifact/com.squareup/javapoet -->
 		<dependency>
-			<groupId>org.apache.velocity</groupId>
-			<artifactId>velocity</artifactId>
-			<version>1.7</version>
+		    <groupId>com.squareup</groupId>
+		    <artifactId>javapoet</artifactId>
+		    <version>1.9.0</version>
 		</dependency>
+
 
 	</dependencies>
 </project>
