--- a/MicroNet.Tools.Annotations.Processors.Plugin/build.properties
+++ b/MicroNet.Tools.Annotations.Processors.Plugin/build.properties
@@ -2,5 +2,4 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml,\
-               lib/tools.annotation.processors-0.0.1-SNAPSHOT-jar-with-dependencies.jar
+               plugin.xml
