--- a/MicroNet.Tools.Core/build.properties
+++ b/MicroNet.Tools.Core/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                lib/tools.yaml.utility-0.0.1-SNAPSHOT-jar-with-dependencies.jar,\
-               lib/micronet-0.0.2-SNAPSHOT-jar-with-dependencies.jar
+               lib/micronet-0.0.2-SNAPSHOT-jar-with-dependencies.jar,\
+               lib/tools.annotation.processors-0.0.1-SNAPSHOT-jar-with-dependencies.jar
