--- a/MicroNet.Tools.Core/build.properties
+++ b/MicroNet.Tools.Core/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                lib/tools.yaml.utility-0.0.1-SNAPSHOT-jar-with-dependencies.jar,\
                lib/micronet-0.0.2-SNAPSHOT-jar-with-dependencies.jar,\
                icons/,\
-               lib/tools.processors-0.0.1-SNAPSHOT-jar-with-dependencies.jar
+               lib/tools.processors-0.0.1-SNAPSHOT-jar-with-dependencies.jar,\
+               plugin.xml
