--- a/MicroNet.Tools.Core/build.properties
+++ b/MicroNet.Tools.Core/build.properties
@@ -3,7 +3,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                lib/tools.yaml.utility-0.0.1-SNAPSHOT-jar-with-dependencies.jar,\
-               lib/micronet-0.0.2-SNAPSHOT-jar-with-dependencies.jar,\
                icons/,\
                lib/tools.processors-0.0.1-SNAPSHOT-jar-with-dependencies.jar,\
-               plugin.xml
+               plugin.xml,\
+               lib/mn-micronet-bundle-0.1.0-jar-with-dependencies.jar
