--- a/MicroNet.Tools.Processors/pom.xml
+++ b/MicroNet.Tools.Processors/pom.xml
@@ -47,24 +47,11 @@
 		</plugins>
 	</build>
 
-	<repositories>
-		<repository>
-			<id>snapshots-repo</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-
 	<dependencies>
 		<dependency>
 			<groupId>com.github.mrharibo.micronet</groupId>
-			<artifactId>micronet</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
+			<artifactId>mn-micronet</artifactId>
+			<version>0.1.0</version>
 			<type>pom</type>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.squareup/javapoet -->
@@ -73,7 +60,5 @@
 			<artifactId>javapoet</artifactId>
 			<version>1.9.0</version>
 		</dependency>
-
-
 	</dependencies>
 </project>
