--- a/MicroNet.Tools.Processors/pom.xml
+++ b/MicroNet.Tools.Processors/pom.xml
@@ -85,5 +85,11 @@
 			<artifactId>javapoet</artifactId>
 			<version>1.9.0</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
