--- a/MicroNet.Tools.Annotations.Processors.Native/pom.xml
+++ b/MicroNet.Tools.Annotations.Processors.Native/pom.xml
@@ -1,9 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<groupId>com.github.mrharibo.micronet</groupId>
-	<artifactId>tools.annotations.processors.native</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>mn-tools-processors-annotations</artifactId>
+	<version>0.1.0</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,8 +33,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.github.mrharibo.micronet</groupId>
-			<artifactId>tools.processors</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<artifactId>mn-tools-processors</artifactId>
+			<version>0.1.0</version>
 		</dependency>
 	</dependencies>
 </project>
