--- a/MicroNet.Tools.Core/build.properties
+++ b/MicroNet.Tools.Core/build.properties
@@ -5,5 +5,4 @@ bin.includes = META-INF/,\
                lib/tools.yaml.utility-0.0.1-SNAPSHOT-jar-with-dependencies.jar,\
                icons/,\
                lib/tools.processors-0.0.1-SNAPSHOT-jar-with-dependencies.jar,\
-               plugin.xml,\
-               lib/mn-micronet-bundle-0.1.0-jar-with-dependencies.jar
+               plugin.xml
