--- a/tools.yaml.utility/pom.xml
+++ b/tools.yaml.utility/pom.xml
@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.mrharibo.micronet</groupId>
-	<artifactId>tools.yaml.utility</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>mn-tools-yaml-utility</artifactId>
+	<version>0.1.0</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -11,6 +11,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
+<!-- 
 	<build>
 		<plugins>
 			<plugin>
@@ -31,6 +32,7 @@
 			</plugin>
 		</plugins>
 	</build>
+ -->
 
 	<repositories>
 		<repository>
