MicroNet Tools prepared for release and Update Site generation

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 MicroNet.Tools.Core/lib/
 MicroNet.Tools.Annotations.Processors.Plugin/lib/
 *.class
+MicroNet.UpdateSite/features/
+MicroNet.UpdateSite/plugins/
+*.jar
