--- a/MicroNet.Tools.CodeAssist/.project
+++ b/MicroNet.Tools.CodeAssist/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Micronet.Tools.CodeAssist</name>
+	<name>MicroNet.Tools.CodeAssist</name>
 	<comment></comment>
 	<projects>
 	</projects>
