--- a/MicroNet.Tools.Core/build.properties
+++ b/MicroNet.Tools.Core/build.properties
@@ -2,7 +2,8 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/tools.yaml.utility-0.0.1-SNAPSHOT-jar-with-dependencies.jar,\
                icons/,\
-               lib/tools.processors-0.0.1-SNAPSHOT-jar-with-dependencies.jar,\
-               plugin.xml
+               plugin.xml,\
+               lib/mn-tools-processors-0.1.0-jar-with-dependencies.jar,\
+               lib/mn-tools-yaml-utility-0.1.0-jar-with-dependencies.jar,\
+               resources/
