--- a/MicroNet.Tools.Core/.classpath
+++ b/MicroNet.Tools.Core/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/tools.processors-0.0.1-SNAPSHOT-jar-with-dependencies.jar" sourcepath="/MicroNet.Tools.Processors/target/tools.processors-0.0.1-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/tools.yaml.utility-0.0.1-SNAPSHOT-jar-with-dependencies.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mn-tools-processors-0.1.0-jar-with-dependencies.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mn-tools-yaml-utility-0.1.0-jar-with-dependencies.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
