New Processors Version

--- a/MicroNet.Tools.Core/build.properties
+++ b/MicroNet.Tools.Core/build.properties
@@ -4,6 +4,6 @@ bin.includes = META-INF/,\
                .,\
                icons/,\
                plugin.xml,\
-               lib/mn-tools-processors-0.1.0-jar-with-dependencies.jar,\
                lib/mn-tools-yaml-utility-0.1.0-jar-with-dependencies.jar,\
-               resources/
+               resources/,\
+               lib/mn-tools-processors-0.2.0-jar-with-dependencies.jar
