--- a/MicroNet.Tools.Processors/pom.xml
+++ b/MicroNet.Tools.Processors/pom.xml
@@ -71,7 +71,7 @@
 	<build>
 		<plugins>
 		
-			<!-- jar-with-dependencies is used to inject MicroNet to Plugins 
+			<!-- jar-with-dependencies is used to inject MicroNet to Plugins -->
 		
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
@@ -114,7 +114,7 @@
 				</executions>
 			</plugin>
 			
-			-->
+			
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -142,6 +142,8 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!-- 
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-gpg-plugin</artifactId>
@@ -156,6 +158,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			 -->
 		</plugins>
 	</build>
 </project>
