--- a/MicroNet.Tools.Core/.classpath
+++ b/MicroNet.Tools.Core/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/mn-tools-processors-0.2.0-jar-with-dependencies.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mn-tools-processors-0.2.0-jar-with-dependencies.jar" sourcepath="/MicroNet.Tools.Processors/target/mn-tools-processors-0.2.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mn-tools-yaml-utility-0.1.0-jar-with-dependencies.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
